--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
 :root {
+  --primary-color: #ffff;
+  --secondary-color: #0bd9f4;
+  --background-color: #242424;
+
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--primary-color);
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -56,8 +60,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --primary-color: #213547;
+    --background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
