--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -5,6 +5,8 @@
   label {
     color: var(--primary-color);
     transition: color 0.25s ease-in;
+    font-weight: bold;
+    font-size: small;
   }
 
   &:focus-within label {
@@ -12,12 +14,14 @@
   }
   
   input {
+    height: 100%;
     outline: none;
     border: none;
     border-bottom: 1px solid var(--primary-color);
     background-color: var(--background-color);
     padding: .5rem 0;
     transition: border 0.25s ease-in;
+    font-size: large;
     
     &:focus-visible {
       border-bottom: 1px solid var(--secondary-color);
