--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -18,6 +18,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid var(--primary-color);
+    margin-bottom: -1px;
     background-color: var(--background-color);
     padding: .5rem 0;
     transition: border 0.25s ease-in;
@@ -25,6 +26,7 @@
     
     &:focus-visible {
       border-bottom: 1px solid var(--secondary-color);
+      margin-bottom: -1px;
     }
   }
 }
