--- a/src/pages/diary/diary.css
+++ b/src/pages/diary/diary.css
@@ -4,3 +4,22 @@
   gap: 1rem;
   margin: 1rem 0;
 }
+
+.diary-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  place-items: center;
+  gap: 1rem;
+
+  h1 {
+    text-align: center;
+  }
+
+  section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    overflow: auto;
+  }
+}
